# video-forge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  README.md  README_ZH.md  SECURITY.md  VideoForge：知识科普视频自动化生产系统方案设计 (开工版).md  config.yaml  demo_salt_dissolve.py  demo_salt_local.py  pyproject.toml  test_e2e.py  test_phase2.py  test_render.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: demo_guide.md  design.md  optimization_backlog.md  phase1_analysis.md  phase3_4_implementation_plan.md  phase3_4_task.md  phase3_4_walkthrough.md  resource-library-implementation.md  roadmap.md  roadmap_en.md
hf-test/: meta.json  package.json
templates/hyperframes/main_template/: data.js  data.json  index.html  package.json
tests/: conftest.py  test_database.py  test_integration.py  test_models.py  test_scene_splitter.py  test_search.py  test_subtitles.py
videoforge/: __init__.py  cli.py  config.py  models.py
videoforge/pipeline/: __init__.py  runner.py
videoforge/resource_library/: __init__.py  downloader.py  frame_sampler.py  indexer.py  models.py  scene_splitter.py  search.py  subtitles.py
videoforge/skills/: __init__.py  base.py
videoforge/skills/asset_search/: __init__.py  local_faiss.py  ytdlp_provider.py
videoforge/skills/asset_tag/: __init__.py  clip_embedder.py  clip_gemini.py  dummy_tag.py
videoforge/skills/qa_check/: __init__.py  multi_level.py
videoforge/skills/rag_template/: __init__.py  extractor.py
videoforge/skills/script_writer/: __init__.py  deepseek_rag.py
videoforge/skills/subtitle_export/: __init__.py  srt_exporter.py
videoforge/skills/timestamp_align/: __init__.py  whisperx_provider.py
videoforge/skills/tts_generate/: __init__.py  edge_tts_provider.py
videoforge/skills/video_render/: __init__.py  hyperframes_provider.py
videoforge/storage/: __init__.py  database.py  dedup.py  sidecar.py  vector_store.py
videoforge/utils/: __init__.py  paths.py
